[gd_scene load_steps=6 format=2]

[ext_resource path="res://widgets/FileChooser.tscn" type="PackedScene" id=1]
[ext_resource path="res://screens/Cut.gd" type="Script" id=2]
[ext_resource path="res://res/fonts/regular16.tres" type="DynamicFont" id=3]
[ext_resource path="res://res/fonts/button_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://widgets/FileDialog.tscn" type="PackedScene" id=5]

[node name="Cut" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "cut_description"

[node name="FileChooser" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 24.0
margin_bottom = 48.0
dialog_path = NodePath("../../FileDialog")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 1024.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="PageCollection" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1024.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 8

[node name="Cut" type="Button" parent="VBoxContainer"]
margin_top = 576.0
margin_right = 1024.0
margin_bottom = 600.0
custom_fonts/font = ExtResource( 4 )
text = "cut_at_position"

[node name="FileDialog" parent="." instance=ExtResource( 5 )]
[connection signal="valid_file_selected" from="VBoxContainer/FileChooser" to="." method="_on_FileChooser_valid_file_selected"]
[connection signal="pressed" from="VBoxContainer/Cut" to="." method="_on_Cut_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
